--- a/pro_jsf/WebContent/inscription.xhtml
+++ b/pro_jsf/WebContent/inscription.xhtml
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" 
-xmlns:f="http://java.sun.com/jsf/core"> 
+<html xmlns="http://www.w3.org/1999/xhtml"
+ xmlns:h="http://java.sun.com/jsf/html" 
+xmlns:f="http://java.sun.com/jsf/core"
+xmlns:ui="http://java.sun.com/jsf/facelets"
+> 
 
     <h:head>
         <meta charset="utf-8" />
@@ -9,6 +12,7 @@ xmlns:f="http://java.sun.com/jsf/core">
          <f:loadBundle basename="bundle.messages" var="msg"/>
     </h:head>
     <h:body>
+    
       <h:form id ="formulaire">
          <fieldset>
             <legend>Inscription</legend>
