--- a/pro_jsf/WebContent/home.xhtml
+++ b/pro_jsf/WebContent/home.xhtml
@@ -12,6 +12,7 @@
       
     </h:head>
     <h:body>
+   <ui:include  src="/deconnexion.xhtml" />
     <ui:include src="/menu.xhtml" />
 
     </h:body> 
