--- a/pro_jsf/WebContent/profil.xhtml
+++ b/pro_jsf/WebContent/profil.xhtml
@@ -10,8 +10,10 @@ xmlns:p="http://primefaces.org/ui"
         <title>profil</title>
        <h:outputStylesheet library="default" name="css/style.css" />
     </h:head>
+    
+    #{connexionBean.session}
     <h:body>
-
+<ui:include  src="/deconnexion.xhtml" />
     <ui:include src="/menu.xhtml" />
   
   <p:fieldset legend="Bienvenu(e) #{connexionBean.utilisateur.login}">
